---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2025-03-23
  Features:
    - Added an option to use locomotives if the player is standing on rails
    - Added an option to automatically open the train UI when quick-riding a locomotive
  Changes:
    - The quick ride menu will show the item icon for vehicles
    - Used fuels item are shown when quick-riding (can be disabled in settings)
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 2025-03-17
  Bugfixes:
    - Fixed an error when placing a vehicle if another mod added equipment before Quick-Ride could add the equipment from the inventory.
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2025-03-08
  Bugfixes:
    - Logistic requests of vehicles will be preserved when vehicle are put back in the player's inventory
    - Fixed equipment shield and energy level not being preserved
    - Fixed a mod crash when placing a vehicle with ghost equipment
  Changes:
    - Let the API handle picking up vehicles
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2025-02-26
  Changes:
    - Added spidertrons to vehicules found by Quick Ride
    - Players can now double tap the shortcut to swap to a second vehicle
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2025.02.24
  Changes:
    - The preference GUI can now be closed by pressing E or escape
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2025.02.14
  Changes:
    - Reworked the GUI to be simpler