@@ -6,11 +6,21 @@ quick-ride-toggle=Quick ride menu
 quick-ride-toggle=Quick ride menu
 
 [mod-setting-name]
-qr-double-tap-delay= Double-tap delay
-qr-show-used-fuel= Show used fuel with flying text
+qr-double-tap-delay=Double-tap delay
+qr-show-used-fuel=Show used fuel with flying text
+qr-handle-trains=Try to use locomotives when standing on rails
+qr-opens-train-menu=Auto-open the train ui when quick-riding a locomotive
+qr-prevent-turn=Prevent turning when quick-riding
+qr-inventory-full-action=What to do when picking up a vehicle without enough inventory space
+
+
+[string-mod-setting]
+qr-inventory-full-action-stay-in=Stay in
+qr-inventory-full-action-get-out=Get out
 
 [mod-setting-description]
 qr-double-tap-delay= How many second must pass before two consequtive "Quick ride" press are not considered a double press
 
 [ui]
 qr-no-space=No space for __1__
+
